# orchard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  README.md  build.rs  shim.c  wrapper.h
.github/workflows/: ci.yml
docs/: design-history.md  developer-log.md  development-plan.md  python-to-rust-port-plan.md  review-2026-07-01.md
docs/superpowers/plans/: 2026-06-29-history-backend-plan.md  2026-06-30-macos-acceptance.md  2026-07-01-p0-magic-framework.md  2026-07-02-autocomplete-upgrades.md  2026-07-02-ci-pipeline.md  2026-07-02-eda-handlers.md  2026-07-02-shell-file-execution-handlers.md  2026-07-03-editor-send-code.md  2026-07-03-foundation-remediation.md  2026-07-03-v05-debugger-completion.md
docs/superpowers/specs/: 2026-06-29-history-backend-design.md  2026-06-29-milestoneD-phase2-editing-hook.md  2026-07-01-magic-framework-design.md  2026-07-02-ci-pipeline-design.md  2026-07-02-eda-handlers-design.md  2026-07-02-shell-file-execution-handlers.md  2026-07-02-timing-profiling-handlers.md  2026-07-02-tool-strengths-analysis.md  2026-07-03-editor-send-code-design.md  2026-07-03-v05-debugger-completion-design.md
src/: auto_reload.rs  cli.rs  completion.rs  dyld.rs  editing.rs  editing_hook.rs  editor_bridge.rs  env_setup.rs  frequency.rs  history.rs  lexer.rs  lib.rs  magic.rs  main.rs  profile.rs  prompt.rs  r_discovery.rs  r_runtime.rs  settings.rs  shell.rs  terminal_graphics.rs  util.rs
src/completion/: formula.rs  function_args.rs  magic.rs  mod.rs  namespace.rs  pipe.rs  schema.rs  spellcheck.rs  variable.rs
src/data/: dataset_schemas.tsv  latex_symbols.tsv  package_symbols.tsv
src/magics/: config.rs  connections.rs  debug.rs  eda.rs  edit_magic.rs  file_magics.rs  history_magics.rs  inspect.rs  inspect_tui.rs  logging.rs  lsmagic.rs  magic_help.rs  mod.rs  r_utils.rs  repro.rs  shell.rs  timing.rs  workspace.rs
src/magics/shell/: bookmark.rs  dir.rs  env.rs  ls.rs  mod.rs  sx.rs
tests/: debugger.rs  editor_bridge.rs  embedded_r.rs  magic_framework.rs
