[package]
name = "orchard"
version = "0.1.0"
edition = "2024"
description = "Modern R REPL with IPython-style magic commands, written in Rust"
license = "MIT OR Apache-2.0"
authors = ["orchard contributors"]
repository = "https://github.com/orchard/orchard"
homepage = "https://github.com/orchard/orchard"
keywords = ["R", "REPL", "terminal", "statistical-computing"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.deb]
maintainer = "orchard contributors <orchard@example.com>"
extended-description = "Orchard is a modern R REPL written in Rust. It provides syntax highlighting, autosuggest, multiline editing, shell integration, and IPython-style magic commands."
depends = "r-base (>= 4.0)"
section = "devel"
priority = "optional"
assets = [
    ["target/release/orchard", "usr/bin/", "755"],
]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
libc = "0.2"
nu-ansi-term = "0.50"
reedline = { path = "vendor/reedline", version = "0.48" }
regex = "1"
shell-words = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
bindgen = "0.72"
