[package]
name = "orchard"
version = "0.1.0"
edition = "2024"
description = "R without the weight — a terminal-native R REPL with IPython magic commands, zsh-grade autocomplete, and shell integration. Pair it with neovim, emacs, or micro in a tmux session."
license = "MIT OR Apache-2.0"
authors = ["orchard contributors"]
repository = "https://github.com/deanlipowicz/orchard"
homepage = "https://github.com/deanlipowicz/orchard"
keywords = ["R", "REPL", "terminal", "statistical-computing", "data-science", "shell"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.deb]
maintainer = "orchard contributors <orchard@example.com>"
extended-description = "Orchard is a terminal-native R REPL written in Rust, pairing with your editor for a lightweight, git-friendly workflow. Features IPython-style magic commands, 14-backend autocomplete (R objects, LaTeX symbols, filesystem paths, fuzzy matching, spellcheck), zsh-style autosuggest, syntax highlighting, multiline editing, built-in shell mode, and 30+ configurable settings via R's options()."
depends = "r-base (>= 4.0)"
section = "devel"
priority = "optional"
assets = [
    ["target/release/orchard", "usr/bin/", "755"],
]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
libc = "0.2"
nu-ansi-term = "0.50"
fuzzy-matcher = "0.3"
reedline = { path = "vendor/reedline", version = "0.48" }
regex = "1"
notify = "7"
zip = { version = "2", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
ratatui = { version = "0.29", optional = true }
shell-words = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
tui = ["ratatui"]

[build-dependencies]
bindgen = "0.72"
cc = "1"

[dev-dependencies]
proptest = "1"

[lints.rust]
missing_docs = "allow"
